# ms_print-service

./: .env  .gitignore  CONFIG_GUIDE.txt  Documentacion_Certificado_LetsEncrypt_PrintService.md  EMPAQUETAR_RENOVAR_CERTIFICADOS.bat  Guia_Poetry_FastAPI.md  Launcher.spec  PASOS.txt  PrintService.spec  Print_Service_EXE_Documentacion.md  RENOVAR_CERTIFICADOS.bat  build.ps1  config.json  fast_build.bat  instalador-printservice.md  launcher.py  main.spec  pyproject.toml  requirements.txt
app/: config.py  constants.py  dashboard.py  main.py  routes.py  schemas.py  server.py  tray.py  updater.py
app/printer/: __init__.py  connection.py  image_builder.py  payment_ticket.py  printer_service.py  schemas.py  ticket_builder.py
certs/: localprint.teamcellmania.com-chain.pem  localprint.teamcellmania.com-crt.pem  server.key  server.pem
instalador/: instalador.iss
